Se agrego el deploy automatico (voy a hacer la prueba, en teoria este commit lo deberia triggerear) y se agrego el endpoint para checkear el estado del servidor.
